--- a/src/components/carousel/item/index.css
+++ b/src/components/carousel/item/index.css
@@ -1,10 +1,11 @@
 .carousel-item {
-  @apply absolute top-0 left-0 w-100% h-100% inline-block overflow-hidden z-1
+  @apply absolute top-0 left-0 w-50% h-100% inline-block overflow-hidden z-1 transition-transform duration-400 ease-in-out
 }
 
 .carousel-item-mask {
   @apply absolute w-100% h-100% top-0 left-0 bg-white opacity-25 duration-200
 }
+      
 
 .carousel-item-active {
   @apply z-10
