--- a/src/components/carousel/main/index.css
+++ b/src/components/carousel/main/index.css
@@ -1,5 +1,5 @@
 .carousel {
-  @apply relative overflow-hidden py-2 bg-blue-100 cursor-pointer
+  @apply relative overflow-hidden py-2 cursor-pointer
 }
 
 .carousel-arrow {
@@ -7,13 +7,13 @@
 }
 
 .carousel-indicators {
-  @apply absolute list-none m-0 p-0 z-2 bottom-0 left-50% translate-(x--50% y--50%)
+  @apply text-center list-none m-0 p-0 z-10  static bottom-26px
 }
 
 .carousel-indicators-item {
-  @apply bg-transparent cursor-pointer inline-block py-12px px-4px opacity-50
+  @apply bg-transparent cursor-pointer inline-block py-12px px-4px 
 }
 
 .carousel-indicators-btn {
-  @apply block w-30px h-2px bg-white border-none outline-0 p-0 m-0 cursor-pointer duration-300
+  @apply block w-30px h-2px bg-gray-300 border-none outline-0 p-0 m-0 cursor-pointer duration-300
 }
