--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -20,3 +20,19 @@ html.dark {
   background-color: var(--default-color);
   color: #fff;
 }
+
+::-webkit-scrollbar {
+  width: 4px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #D0D0D0;
+}
+
+::-moz-scrollbar {
+  width: 4px;
+}
+
+::-moz-scrollbar-thumb {
+  background-color: #D0D0D0;
+}
